libs/@local/hashql/mir/tests/ui/reify/synthetic-graph-not-first-class.jsonc
//@ run: fail
//@ description: Graph intrinsic cannot be used as a value
[
  "let",
  "id",
  [
    "fn",
    { "#tuple": [] },
    { "#struct": { "f": "_" } },
    "_",
    "f"
  ],
  ["id", "::graph::head::entities"]
  //~^ ERROR `::graph::head::entities` cannot be used as a value
]
